update on accpounts

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <h1>Bienvenido a la Biblioteca 28 de Noviembre</h1>
         <nav>
             <a href="{% url 'home' %}">Inicio</a>
-            {% comment %} <a href="{% url 'logout' %}">Cerrar Sesión</a> {% endcomment %}
+            {% comment %} <a href="{% url 'logout' %}">Cerrar Sesión</a> hay que ver como hago para hacer esto{% endcomment %}
         </nav>
     </header>
     <main>
