updates on footer styles

--- a/apps/dashboards/templates/dashboards/employee_dashboard.html
+++ b/apps/dashboards/templates/dashboards/employee_dashboard.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block extra_style %}
-    <link rel="stylesheet" href="{% static 'css/employee_dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'css/employee_dashboard_styles.css' %}">
 {% endblock %}
 
 {% block content %}
