--- a/apps/books/templates/books/add_book.html
+++ b/apps/books/templates/books/add_book.html
@@ -1,11 +1,63 @@
 {% extends "base.html" %}
 
+{% load static %}
+
+{% block extra_style %}
+    <link rel="stylesheet" href="{% static 'css/add_book_styles.css' %}">
+{% endblock %}
+
 {% block content %}
 <h1>Agregar Libro</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
+    
+    <!-- Título del libro -->
+    <div class="form-row">
+        <label for="{{ form.title.id_for_label }}">Título</label>
+        {{ form.title }}
+    </div>
+
+    <!-- Autor(es) -->
+    <div class="form-row">
+        <label for="{{ form.authors.id_for_label }}">Autor(es)</label>
+        {{ form.authors }}
+    </div>
+
+    <!-- ISBN -->
+    <div class="form-row">
+        <label for="{{ form.isbn.id_for_label }}">ISBN</label>
+        {{ form.isbn }}
+    </div>
+
+    <!-- Editorial -->
+    <div class="form-row">
+        <label for="{{ form.publisher.id_for_label }}">Editorial</label>
+        {{ form.publisher }}
+    </div>
+
+    <!-- Año de publicación -->
+    <div class="form-row">
+        <label for="{{ form.publication_year.id_for_label }}">Año de publicación</label>
+        {{ form.publication_year }}
+    </div>
+
+    <!-- Género -->
+    <div class="form-row">
+        <label for="{{ form.genre.id_for_label }}">Género</label>
+        {{ form.genre }}
+        <label for="{{ form.other_genre.id_for_label }}">Otro</label>
+        {{ form.other_genre }}
+    </div>
+
+    <!-- Idioma -->
+    <div class="form-row">
+        <label for="{{ form.language.id_for_label }}">Idioma</label>
+        {{ form.language }}
+    </div>
+
+    <!-- Botón de guardar -->
     <button type="submit" class="btn btn-primary">Guardar</button>
 </form>
+
 <a href="{% url 'employee_dashboard' %}">Volver al Dashboard</a>
 {% endblock %}
