--- a/static/css/base_styles.css
+++ b/static/css/base_styles.css
@@ -48,7 +48,7 @@ footer {
     color: #fff;
     text-align: center;
     padding: 1rem 0;
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
