--- a/static/css/base_styles.css
+++ b/static/css/base_styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-    background-color: #007bff;
+    background-color: #333;
     color: #fff;
     padding: 1rem 2rem;
     display: flex;
