--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         {% endblock %}
     </main>
     <footer>
-        <p>Todos los derechos reservados &copy; 2025</p>
+        <p>&copy; 2025 | Biblioteca 28 de Noviembre. Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
