--- a/apps/newspaper/templates/newspaper/add_newspaper.html
+++ b/apps/newspaper/templates/newspaper/add_newspaper.html
@@ -24,8 +24,8 @@
             </div>
 
             <div class="form-row">
-                <label for="{{ form.publication_date.id_for_label }}">Fecha de Publicación</label>
-                {{ form.publication_date }}
+                <label for="id_publication_date">Fecha de Publicación:</label>
+                <input type="date" id="id_publication_date" name="publication_date" required>
             </div>
 
             <!-- Campo 'scope' (Alcance) -->
