--- a/apps/dashboards/templates/dashboards/employee_dashboard.html
+++ b/apps/dashboards/templates/dashboards/employee_dashboard.html
@@ -1,3 +1,4 @@
+<!-- employee_dashboard.html -->
 {% extends "base.html" %}
 {% load static %}
 
@@ -6,7 +7,6 @@
 {% endblock %}
 
 {% block content %}
-<h1>Bienvenido, Empleado</h1>
 <p>Selecciona una opción:</p>
 
 <div class="row">
