--- a/static/css/base_styles.css
+++ b/static/css/base_styles.css
@@ -1,3 +1,4 @@
+/* Estilos generales */
 * {
     margin: 0;
     padding: 0;
@@ -13,6 +14,7 @@ body {
     margin: 0;
 }
 
+/* Header */
 header {
     background-color: #333;
     color: #fff;
@@ -22,27 +24,48 @@ header {
     align-items: center;
 }
 
-header h1 {
-    font-size: 1.5rem;
+.header-left {
+    display: flex;
+    align-items: center;
+}
+
+.header-left p {
+    font-size: 1.2rem;
+    font-weight: bold;
     margin: 0;
 }
 
-header nav a {
-    color: #fff;
-    text-decoration: none;
-    margin-left: 1rem;
+.header-center {
+    text-align: center;
+    flex-grow: 1;
+    font-size: 1.5rem;
     font-weight: bold;
+    color: #f9f9f9;
 }
 
-header nav a:hover {
+.header-right {
+    display: flex;
+    align-items: center;
+}
+
+.header-right a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
+.header-right a:hover {
     text-decoration: underline;
 }
 
+/* Main */
 main {
     padding: 2rem;
     min-height: calc(100vh - 160px);
 }
 
+/* Footer */
 footer {
     background-color: #333;
     color: #fff;
@@ -53,6 +76,7 @@ footer {
     width: 100%;
 }
 
+/* Estilos para los botones */
 button,
 .btn {
     background-color: #007bff;
@@ -69,6 +93,7 @@ button:hover,
     background-color: #0056b3;
 }
 
+/* Estilo para las tablas */
 table {
     width: 100%;
     border-collapse: collapse;
