--- a/apps/newspaper/templates/newspaper/add_newspaper.html
+++ b/apps/newspaper/templates/newspaper/add_newspaper.html
@@ -19,6 +19,11 @@
             </div>
 
             <div class="form-row">
+                <label for="{{ form.copete.id_for_label }}">Copete</label>
+                {{ form.copete }}
+            </div>
+
+            <div class="form-row">
                 <label for="{{ form.publisher.id_for_label }}">Editorial</label>
                 {{ form.publisher }}
             </div>
